log
Fri Mar 27 05:35:40 PM UTC 2026: 
 tests:  12|0
total_score: 60/60
1c1d64c
Fri Mar 27 05:53:35 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:102:22: error: ‘new’ undeclared (first use in this function)
  102 |         list->head = new;
      |                      ^~~
list.c:102:22: note: each undeclared identifier is reported only once for each function it appears in
list.c:100:12: error: unused variable ‘newNodo’ [-Werror=unused-variable]
  100 |     Node * newNodo = createNode(data);
      |            ^~~~~~~
cc1: all warnings being treated as errors
36f40f3
Fri Mar 27 05:54:03 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 60/60
cd37786
Fri Mar 27 05:58:50 PM UTC 2026: 
 list.c | 28 ++++++++++++++--------------
 1 file changed, 14 insertions(+), 14 deletions(-)
 tests:  12|0
total_score: 60/60
76005d8
Fri Mar 27 06:01:59 PM UTC 2026: 
 tests:  12|0
total_score: 60/60
fbe9b10
Fri Mar 27 06:43:23 PM UTC 2026: 
 list.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  12|0
total_score: 60/60
35fb6a3
Mon Mar 30 01:15:52 AM UTC 2026: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  12|0
total_score: 60/60
31847d6
Mon Mar 30 01:21:38 AM UTC 2026: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  12|0
total_score: 60/60
88853fc
